# M2_H13_2

./: .gitignore  README.md  pyproject.toml
quotes_project/: db.sqlite3
quotes_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: author.html  base.html  index.html  new_author.html  new_quote.html
quotes_project/quotes/templatetags/: extract.py
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/users/: forms.py  urls.py  views.py
quotes_project/users/migrations/: 0001_initial.py
quotes_project/utils/: migration.py
